--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,19 +2,19 @@
       <div class="bottom-button">
         <%= link_to root_path do %>
         <i class='fas fa-home'></i>
-        <p>Home</p>
+        <%# <p>Home</p> %>
         <% end %>
       </div>
       <div class="bottom-button">
         <%= link_to trips_path do %>
         <i class='fas fa-plane'></i>
-        <p>Trips</p>
+        <%# <p>Trips</p> %>
         <% end %>
       </div>
       <div class="bottom-button">
         <%= link_to profile_path do %>
         <i class='fas fa-user-circle'></i>
-        <p>Profile</p>
+<%#         <p>Profile</p> %>
         <% end %>
       </div>
     </div>
