--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -2,19 +2,20 @@
 <div class="cards">
   <% @trips.each do |t| %>
     <%= link_to (trip_path(t)) do %>
-      <% unless t.flights.empty? %>
+
+
       <div class="card">
-        <p class="where"><%= "Trip to #{t.flights[0].destination}" %></p>
+        <p class="where"><%= "Trip to #{t.destination}" %></p>
 
         <div class="arrows">
           <div class="flags">
-            <% c = ISO3166::Country.find_country_by_name("#{t.flights[0].departure}") %>
+            <% c = ISO3166::Country.find_country_by_name("#{t.home}") %>
               <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="flag">
             <%= image_tag("triangle-index.png", class:"triangle-image") %>
-            <% c = ISO3166::Country.find_country_by_name("#{t.flights[0].destination}") %>
+            <% c = ISO3166::Country.find_country_by_name("#{t.destination}") %>
               <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="flag">
             <%= image_tag("triangle-index.png", class:"triangle-image") %>
-            <% c = ISO3166::Country.find_country_by_name("#{t.flights[0].departure}") %>
+            <% c = ISO3166::Country.find_country_by_name("#{t.home}") %>
               <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="flag">
           </div>
           <div class="arrow">
@@ -23,7 +24,7 @@
         </div>
          <p class="description">Check out more infos about your trip</p>
       </div>
-      <% end %>
+
     <% end %>
   <% end %>
 </div>
