--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,6 +19,8 @@
                       input_html: { autocomplete: "new-password" } %>
           <%= f.input :name,
                       required: true %>
+          <%= f.input :phonenumber,
+                      required: true %>
           <%= f.input :photo, as: :file %>
         </div>
 
