--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -14,8 +14,8 @@
                 <h3><%= @user.email %></h3>
             </div>
             <div class="inf">
-                <p>Country</p>
-                <h3>Germany</h3>
+                <p>Phone number:</p>
+                <h3><%= @user.phonenumber %></h3>
             </div>
             <div class="inf">
                 <p>Vaccination status</p>
