small changes on css

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,7 +2,7 @@
 
 // For example:
 $red: #FD1015;
-$blue: #23786B;
+$blue: #282828;
 $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
@@ -15,4 +15,3 @@ $brand: #282828;
 body {
   background-color: $body-color !important;
 }
-
