--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 55%;
-  width: 80%;
+  height: 53%;
+  width: 85%;
   margin:0 auto;
   color: #282828 !important;
   text-align: center;
@@ -115,8 +115,7 @@ html, body, .container{
     background-color: white;
     text-decoration: none;
     font-size: 24px;
-    padding: 5px;
-    padding-top: 8px;
+    padding: 12px 0;
     border-radius: 8px 8px 0 0;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
 }
