--- a/app/assets/stylesheets/pages/_create_flight.scss
+++ b/app/assets/stylesheets/pages/_create_flight.scss
@@ -1,5 +1,5 @@
 .flight-submit {
-    background-color: #23786B;
+    background-color: $brand;
     font-size: 32px;
     border-radius: 10px;
     padding: 10px 15px;
@@ -13,6 +13,6 @@
   border-radius: 10px;
 }
 .nice-class{
-  color: #23786B;
-  font-weight: bolder;
+  color: $brand;
+  // font-weight: bolder;
 }
