--- a/app/assets/stylesheets/pages/_new.scss
+++ b/app/assets/stylesheets/pages/_new.scss
@@ -2,6 +2,9 @@
   background-color: white;
 }
 
+#new-trip-map {
+  border-radius:50px 50px 0px 0px;
+}
 
 .form .button {
 
@@ -15,12 +18,12 @@
   box-shadow: 0px 0px 6px #888888;
 }
 
-.form {
-  margin: 20px;
-}
+// .form {
+//   margin: 20px;
+// }
 
 .input-class {
-  border: 0.5px solid #2D70A8;
+  // border: 0.5px solid #2D70A8;
   box-sizing: border-box;
   border-radius: 10px;
 }
