--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,21 +1,28 @@
-<div class="container">
-
-  <h1>New trip</h1>
-  <%= link_to 'Cancel', root_path,  class: "cancel-link" %>
-      <div class="top-mark">
-      <svg width="148" height="26" viewBox="0 0 148 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <line x1="3" y1="13.5" x2="137" y2="13.5" stroke="#C4C4C4" stroke-width="7"/>
-      <circle cx="13" cy="13" r="13" fill="#C4C4C4"/>
-      <circle cx="135" cy="13" r="13" fill="#C4C4C4"/>
-      <circle cx="13" cy="13" r="10" fill="#23786B"/>
-      </svg>
-    </div>
+<div class="main-container container-align-left">
+  <p style="margin-top: -32px; margin-bottom:  32px; color: #23786B;">Hi, <%= current_user.name %>!</p>
+  <%#= link_to 'Cancel', root_path,  class: "cancel-link" %>
+  <div class="top-mark">
+    <svg width="148" height="26" viewBox="0 0 148 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <line x1="3" y1="13.5" x2="137" y2="13.5" stroke="#C4C4C4" stroke-width="7"/>
+    <circle cx="13" cy="13" r="13" fill="#C4C4C4"/>
+    <circle cx="135" cy="13" r="13" fill="#C4C4C4"/>
+    <circle cx="13" cy="13" r="10" fill="#23786B"/>
+    </svg>
+  </div>
+  <h2 style="margin: 32px 0px;">Review all Covid-19 flight regulations, and travel stress-free!</h2>
 
   <div class="form">
     <%= simple_form_for [ @trip ] do |f| %>
-      <%= f.input :home, label: 'From:', input_html: { class: ["input-class", "algolia_search"] }, label_html: { class: "nice-class" }%>
-      <%= f.input :destination, label: 'To:', input_html: { class: ["input-class", "algolia_search"] }, label_html: { class: "nice-class" } %>
-      <%= f.button :submit, 'Next', class:"button" %>
+      <%= f.input :home, label: false, input_html: { class: ["input-class", "algolia_search", "nice-class"], placeholder: "🛫 From" }%>
+      <%= f.input :destination, label: false, input_html: { class: ["input-class", "algolia_search", "nice-class", "margin-killer"], placeholder: "🛬 To" } %>
+      <div class="main-add-map">
+        <%= f.button :submit, 'Next', class:"decoration-none" %>
+        <p>>></p>
+      </div>
     <% end %>
   </div>
+
 </div>
+  <div id="new-trip-map" style="width: 100%; height: 300px; background-color: red;">
+
+  </div>
