--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -23,6 +23,7 @@
   </div>
 
 </div>
-  <div id="new-trip-map" style="width: 100%; height: 400px; background-color: red;">
+<!-- PLACE YOUR MAP IN THIS DIV. -->
+<div id="new-trip-map" style="width: 100%; height: 400px; background-color: red;">
 
-  </div>
+</div>
