--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -23,7 +23,7 @@
   </div>
 
 </div>
-<!-- PLACE YOUR MAP IN THIS DIV. -->
+<!-- PLACE YOUR MAP IN THIS DIV -->
 <div id="new-trip-map" style="width: 100%; height: 400px; background-color: red;">
 
 </div>
