--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -17,10 +17,10 @@
   height: 148px;
   border-radius: 10px;
   margin-bottom: 16px;
-  box-shadow: 0px 0px 6px #9A9A9A;
   display: flex;
   text-decoration: none;
   color: black;
+  border: none;
 }
 
 .where {
