--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -62,8 +62,27 @@
 }
 
 .show-card{
+  background: white;
+  color: $brand;
   padding: 20px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  // filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border-radius: 8px;
+
+  p {
+    margin: 0;
+  }
+}
+
+.top-show-card{
+  background: white;
+  color: $brand;
+  padding: 16px 20px;
+  border-radius: 8px;
+  margin-bottom: 8px;
+
+  p {
+    margin: 0;
+  }
 }
 
 .img-show-page-flag-trips {
@@ -134,15 +153,13 @@
 
 
 .container-show {
-    margin: 5%;
-    box-shadow: 0px 0px 6px #9A9A9A;
-    border-radius: 7px;
+  margin: 5%;
+  border-radius: 7px;
 }
 
 .header {
-  position: relative;
-  margin: 5%;
-  margin-bottom: 30px;
+  // position: relative;
+  margin: 30px auto;
 }
 
 .title {
