--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 
 
   <h1>Discover <br>Covid-19 flight regulations</h1>
-  <p class="main-text">Stop stressing, start flying potato</p>
+  <p class="main-text">Stop stressing, start flying again</p>
   <% if user_signed_in? %>
     <div class="main-add-map">
       <%= link_to "Where to?", new_trip_path, class: "decoration-none" %>
