finishes styling for trips#show

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,19 +1,19 @@
  <div class="bottom-bar">
       <div class="bottom-button">
         <%= link_to root_path do %>
-        <i class='fas fa-home'></i>
+        <p style="font-size: 39px;">⌂</p>
         <%# <p>Home</p> %>
         <% end %>
       </div>
       <div class="bottom-button">
         <%= link_to trips_path do %>
-        <i class='fas fa-plane'></i>
+        <p class='' style="font-size: 34px;">✈</p>
         <%# <p>Trips</p> %>
         <% end %>
       </div>
       <div class="bottom-button">
         <%= link_to profile_path do %>
-        <i class='fas fa-user-circle'></i>
+        <i class='far fa-user-circle'></i>
 <%#         <p>Profile</p> %>
         <% end %>
       </div>
