--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -90,7 +90,6 @@
   height: auto;
   object-fit: cover;
   border-radius: 40%;
-  margin: 0 auto;
 }
 
 .img-show-page-flag-flights {
@@ -129,31 +128,30 @@
 
 .flexbox-panel {
      display: flex;
-     flex-direction: row;
-     flex-wrap: nowrap;
-     justify-content: center;
      align-items: center;
-     align-content: center;
+     justify-content: space-between;
 }
 
 .flex-item {
-  // flex: 0 1 auto;
-  // flex-grow: 0;
-  // flex-shrink: 1;
-  // flex-basis: auto;
   padding-left: 20px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 6px;
-  margin-left: 25px;
-  margin-right: 25px;
+}
 
+#align-right {
+  align-items: flex-end;
+}
+
+#align-left {
+  align-items: flex-start;
 }
 
 
 .container-show {
-  margin: 5%;
+  width: 91%;
+  margin: 8px auto;
   border-radius: 7px;
 }
 
@@ -191,12 +189,11 @@ ul {
   display: flex;
   justify-content: space-between;
   padding: 6px;
-  margin-left: 30px;
-  margin-right: 30px;
+  border-bottom: 1px solid lightgray;
 }
 
 .font_text1 {
-  background-color: #83D644;
+  // background-color: #83D644;
   padding: 2px;
   border-radius: 6px;
 }
