--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -2,11 +2,10 @@
   <p style="margin-top: -32px; margin-bottom:  32px; color: #23786B;">Hi, <%= current_user.name %>!</p>
   <%#= link_to 'Cancel', root_path,  class: "cancel-link" %>
   <div class="top-mark">
-    <svg width="148" height="27" viewBox="0 0 148 27" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <line x1="4" y1="12" x2="138" y2="12" stroke="#C4C4C4" stroke-width="4"/>
-    <circle cx="13" cy="14" r="13" fill="#C4C4C4"/>
-    <circle cx="135" cy="13" r="13" fill="#C4C4C4"/>
-    <circle cx="135" cy="13" r="10" fill="#23786B"/>
+    <svg width="343" height="12" viewBox="0 0 343 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <circle cx="337" cy="6" r="5.5" stroke="black"/>
+    <circle cx="6" cy="6" r="5.5" stroke="black"/>
+    <line x1="11" y1="5.5" x2="331" y2="5.5" stroke="black" stroke-opacity="0.46" stroke-dasharray="5 5"/>
     </svg>
   </div>
   <h2 style="margin: 32px 0px;">Review all Covid-19 flight regulations, and travel <br> stress-free!</h2>
