--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,18 +1,29 @@
-<div class="header pt-3">
+<% c = ISO3166::Country.find_country_by_name(@trip.home) %>
+<% d = ISO3166::Country.find_country_by_name(@trip.destination) %>
+
+<!-- THIS <BR> IS A TEMPORARY SOLUTION -->
+<br>
+<div class="header">
   <!-- title and stuff -->
   <!-- <h1 class="title"> Trip to <%#=@trip.destination%> </h1> -->
 
-  <div class="top-mark mt-6">
+  <div class="top-mark mt-6" style="position: relative;">
     <!-- Put IATA code before and after the SVG -->
     <!-- <p><%#= @trip.home %></p> -->
-    <svg width="148" height="15" viewBox="0 0 148 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <line x1="3" y1="13.5" x2="137" y2="13.5" stroke="#C4C4C4" stroke-width="3"/>
-    <circle cx="13" cy="13" r="13" fill="#C4C4C4"/>
-    <circle cx="135" cy="13" r="13" fill="#C4C4C4"/>
-    <circle cx="13" cy="13" r="10" fill="#23786B"/>
+    <svg width="343" height="12" viewBox="0 0 343 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <circle cx="337" cy="6" r="5.5" stroke="black"/>
+    <circle cx="6" cy="6" r="5.5" stroke="black"/>
+    <line x1="11" y1="5.5" x2="331" y2="5.5" stroke="black" stroke-opacity="0.46" stroke-dasharray="5 5"/>
     </svg>
+
+    <p style="position: absolute; top: -5px; left: 47%; color: #282828; background-color: #eaeeef; font-size: 24px;">✈</p>
     <!-- Put IATA code before and after the SVG -->
     <!-- <p><%#= @trip.destination %></p> -->
+  </div>
+
+  <div class="container-show d-flex justify-content-between" style="color: #282828; margin-top: -12px;">
+    <h2><%= c.alpha3 %></h2>
+    <h2><%= d.alpha3 %></h2>
   </div>
 </div>
 <div class="container-show">
@@ -32,8 +43,7 @@
 
     <!-- flags and the name of the country -> change this to a flexbox-->
     <div class="flexbox-panel">
-      <div class="flex-item">
-        <% c = ISO3166::Country.find_country_by_name(@trip.home) %>
+      <div class="flex-item" id="align-left">
         <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="img-show-page-flag-trips">
         <p><%= @trip.home %></p>
       </div>
@@ -41,9 +51,8 @@
         <h3>🛫</h3>
       </div>
 
-      <div class="flex-item">
-        <% c = ISO3166::Country.find_country_by_name(@trip.destination) %>
-        <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="img-show-page-flag-trips">
+      <div class="flex-item" id="align-right">
+        <img src="https://www.countryflags.io/<%= d.alpha2 %>/flat/64.png" class="img-show-page-flag-trips">
         <p><%= @trip.destination %></p>
       </div>
     </div>
@@ -58,11 +67,9 @@
 
 
     <!-- Button trigger modal -->
-    <p style="color: grey;" data-toggle="modal" data-target="#exampleModal1">
+    <p style="color: grey; margin-top: 8px;" data-toggle="modal" data-target="#exampleModal1">
       More infos
     </p>
-
-
   </div>
 </div>
 
@@ -80,7 +87,7 @@
       <div class="modal-body">
                    <!-- testing from here -->
 <div class="flexbox-panel">
-      <div class="flex-item">
+      <div class="flex-item" id="align-right">
         <% c = ISO3166::Country.find_country_by_name(@trip.home) %>
         <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="img-show-page-flag-flights">
         <p><%= @trip.home %></p>
@@ -88,7 +95,7 @@
       <div class="flex-item">
         <%= image_tag "arrow.png", class:"img-show-page-arrow-flights" %>
       </div>
-      <div class="flex-item">
+      <div class="flex-item" id="align-left">
         <% c = ISO3166::Country.find_country_by_name(@trip.destination) %>
         <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="img-show-page-flag-flights">
         <p><%= @trip.destination %></p>
@@ -144,7 +151,7 @@
 
     <!-- flags and the name of the country -> change this to a flexbox-->
     <div class="flexbox-panel">
-      <div class="flex-item">
+      <div class="flex-item" id="align-left">
         <% c = ISO3166::Country.find_country_by_name(@trip.home) %>
         <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="img-show-page-flag-trips">
         <p><%= @trip.home %></p>
@@ -154,7 +161,7 @@
 
 
       </div>
-      <div class="flex-item">
+      <div class="flex-item" id="align-right">
         <% c = ISO3166::Country.find_country_by_name(@trip.destination) %>
         <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="img-show-page-flag-trips">
         <p><%= @trip.destination %></p>
@@ -170,7 +177,7 @@
         <i class="fas fa-vial"></i>
         <p class="font_text1"><%= @test_type_home %></p>
       </div>
-    <p style="color: grey;" data-toggle="modal" data-target="#exampleModal2">
+    <p style="color: grey; margin-top: 8px;" data-toggle="modal" data-target="#exampleModal2">
       More infos
     </p>
 
