--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -2,3 +2,22 @@
 @import "home";
 @import "sign_in_up";
 @import "create_flight";
+
+
+.container-index {
+  margin: 5%;
+  border-radius: 7px;
+}
+
+.show-card{
+  background: white;
+  color: $brand;
+  padding: 20px;
+  // filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border-radius: 8px;
+  height: 50px;
+
+  p {
+    margin: 0;
+  }
+}
