--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -2,25 +2,8 @@
 @indbound_flights %>
 
 <div class="container-show">
-  <div class="show-card">
-    <% if @outbound.flight_number.nil? %>
-      <% @outbound_flights.each do |flight| %>
-        <hr>
-        <p><%= flight[:departure_full] %></p>
-        <p><%= flight[:arrival_full]%></p>
-        <p><%= flight[:price] %></p>
-        <p><%= flight[:departure_time] %></p>
-        <p><%= flight[:arrival_time] %></p>
-        <%= simple_form_for @outbound do |f| %>
-          <%= f.input :flight_number, input_html: { value: flight[:flight_number] }, as: :hidden %>
-          <%= f.input :api_flight_id, input_html: { value: flight[:id] }, as: :hidden %>
-          <div class="main-add-map">
-            <%= f.button :submit, "book", class: "decoration-none"%>
-          </div>
-        <% end %>
-      <% end %>
-    <% else %>
-      <% @flight = @outbound_flights.select {|flight| flight["id"] == @outbound.outbound.api_flight_id} %>
-    <% end %>
-  </div>
+  <h2> book your outbound flight! </h2>
+  <%= render "booking", flight_instance: @outbound, results: @outbound_flights %>
+  <h2> book your inbound flight! </h2>
+  <%= render "booking", flight_instance: @inbound, results: @inbound_flights %>
 </div>
