--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -94,7 +94,7 @@
         <i class="fas fa-home"></i>
       </div>
       <div class="box_text">
-        <p class="font_text">up to 14 days</p>
+        <p class="font_text1">up to 14 days</p>
       </div>
       <div class="box-empty-1">
       </div>
@@ -103,13 +103,13 @@
         <i class="fas fa-head-side-mask"></i>
       </div>
       <div class="box_text">
-        <p class="font_text"><%= @mask_required_destination %></p>
+        <p class="font_text1"><%= @mask_required_destination %></p>
       </div>
     </div>
     <div class="box_e">
       <i class="fas fa-vial"></i>
       <div class="box_text">
-        <p class="font_text"><%= @test_type_destination %></p>
+        <p class="font_text1"><%= @test_type_destination %></p>
       </div>
     </div>
     <ul>
@@ -205,7 +205,7 @@
       <i class="fas fa-home"></i>
     </div>
     <div class="box_text">
-      <p class="font_text">up to 14 days</p>
+      <p class="font_text1">up to 14 days</p>
     </div>
     <!-- possibly useless -->
 <!--     <div class="box-empty-1">
@@ -215,13 +215,13 @@
       <i class="fas fa-head-side-mask"></i>
     </div>
     <div class="box_text">
-      <p class="font_text"><%= @mask_required_home %></p>
+      <p class="font_text1"><%= @mask_required_home %></p>
     </div>
   </div>
   <div class="box_e">
     <i class="fas fa-vial"></i>
     <div class="box_text">
-      <p class="font_text"><%= @test_type_home %></p>
+      <p class="font_text1"><%= @test_type_home %></p>
     </div>
   </div>
   <ul>
