Styled the profile page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -50,7 +50,7 @@ html, body, .container{
 
 #upper-bar-main p {
   font-size: 32px;
-  color: #2E4552;
+  color: $brand;
   margin-top: 15px;
   margin-left: 10px;
   font-weight: bold;
