--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -8,17 +8,18 @@
     margin-top: 10px;
     font-weight: bold;
     margin-bottom: 50px;
-    color: #23786B;
+    color: $brand;
 }
 
 .user-info {
 
     text-align: left;
     margin: 30px 20px;
-    border: 1px solid #23786B;
+    border: 1px solid $brand;
     padding: 10px;
-    border-radius: 15px;
-    box-shadow: 0px 0px 2px black;
+    border-radius: 8px;
+    color: $brand;
+    background-color: #ffffff;
 }
 
 .user-info h3 {
@@ -37,11 +38,11 @@
   width: 150px;
   border-radius: 50%;
   border: 5px solid white;
-  box-shadow: 0px 0px 0px 5px #2E4552;
+  box-shadow: 0px 0px 0px 5px $brand;
 }
 
 .inf p {
-  border-left: 3px solid #2E4552;
+  border-left: 3px solid $brand;
   padding-left: 10px;
   margin-bottom: 8px;
 }
