Style the log in and sign up page

--- a/app/assets/stylesheets/pages/_sign_in_up.scss
+++ b/app/assets/stylesheets/pages/_sign_in_up.scss
@@ -4,17 +4,16 @@
     text-align: center;
   }
   .form-actions input {
-    background-color: #23786B;
+    background-color: $brand;
     font-size: 18px;
     border-radius: 10px;
-    border: 2px solid white;
     text-decoration: none;
     color: white;
     font-weight: bolder;
     margin-bottom: 20px;
   }
   a {
-    color:#23786B;
+    color: $brand;
     margin-left: 5px;
     text-decoration: none;
   }
