change link to booking

--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -54,6 +54,7 @@
     <p style="color: grey; margin-top: 8px;" data-toggle="modal" data-target="#exampleModal1">
       More infos
     </p>
+    <%= link_to 'Search for flights', new_trip_trip_flight_path(@trip) %>
   </div>
 </div>
 <!-- 1st TRIP CARD end -->
