--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,8 +3,32 @@
 @import "avatar";
 @import "navbar";
 
+.arrow {
+  position: relative;
+  left: 105px;
+}
 
+.card {
+  width: 100%;
+  border-radius: 10px;
+  margin-bottom: 16px;
+  display: flex;
+  text-decoration: none;
+  border: none;
+  padding: 20px;
+  z-index: 1;
 
+  p {
+    margin: 0;
+    font-size: 0.8rem;
+  }
+
+  h2 {
+    margin-top: -4px;
+    // margin-bottom: 1px;
+    font-size: 25px;
+  }
+}
 
 .cards {
   justify-content: center;
@@ -12,45 +36,17 @@
   padding-bottom: 80px;
 }
 
-.card {
-  width: 100%;
-  height: 148px;
-  border-radius: 10px;
-  margin-bottom: 16px;
-  display: flex;
-  text-decoration: none;
-  color: black;
-  border: none;
-}
-
-.where {
-  margin-top: 18px;
-  margin-left: 18px;
-}
-
-.when {
-  margin-left: 18px;
+#description {
+  margin: 8px 0 0 0;
 }
 
 .flags {
-  margin-left: 18px;
-}
-
-.arrows {
   display: flex;
-}
-
-.arrow {
-  position: relative;
-  left: 105px;
-
-}
-
-.triangle-image {
-  margin-left: 5px;
-  margin-right: 5px;
-  width: 14px;
-  height: 14px;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid lightgray;
+  padding-bottom:  8px;
 }
 
 .flag  {
@@ -58,7 +54,25 @@
   border-radius: 40%;
 }
 
-.description {
-  margin-left: 18px;
-  margin-top: 6px;
+.flag-index  {
+  width: 60px;
+  border-radius: 40%;
+}
+
+.index-placeholder-img {
+  width: 100%;
+  height: 55vh;
+  background-position: center;
+  background-size: cover;
+  position: absolute;
+  bottom: 0;
+  border-radius:50px 50px 0px 0px;
+  filter: grayscale(50%)
+}
+
+.triangle-image {
+  margin-left: 5px;
+  margin-right: 5px;
+  width: 14px;
+  height: 14px;
 }
