--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,30 +1,27 @@
-<h1>My Trips</h1>
+<div class="container-show d-flex justify-content-between">
+  <p style="padding-top: 26px; margin-bottom:  32px; color: #23786B;">Hi, <%= current_user.name %>!</p>
+  <h1 style="color: black; padding-top: 26px; font-size:24px;">Your Trips</h1>
+</div>
+
 <div class="cards">
   <% @trips.each do |t| %>
     <%= link_to (trip_path(t)) do %>
-
-
       <div class="card">
-        <p class="where"><%= "Trip to #{t.destination}" %></p>
-
-        <div class="arrows">
-          <div class="flags">
-            <% c = ISO3166::Country.find_country_by_name("#{t.home}") %>
-              <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="flag">
-            <%= image_tag("triangle-index.png", class:"triangle-image") %>
-            <% c = ISO3166::Country.find_country_by_name("#{t.destination}") %>
-              <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="flag">
-            <%= image_tag("triangle-index.png", class:"triangle-image") %>
-            <% c = ISO3166::Country.find_country_by_name("#{t.home}") %>
-              <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="flag">
-          </div>
-          <div class="arrow">
-          <%= image_tag("index-arrow.jpg", class:"arrow-image") %>
-          </div>
+        <p class="">Destination:</p>
+        <h2><%= "#{t.destination}" %></h2>
+        <div class="flags">
+          <% c = ISO3166::Country.find_country_by_name("#{t.home}") %>
+          <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="flag-index">
+          <i>🛫</i>
+          <% c = ISO3166::Country.find_country_by_name("#{t.destination}") %>
+          <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="flag-index">
         </div>
-         <p class="description">Check out more infos about your trip</p>
+         <p id="description">Review your trip</p>
       </div>
-
     <% end %>
   <% end %>
+
+</div>
+<!-- Empty div to mount the background image on. Keep image as inline style!-->
+<div class="index-placeholder-img" style="background-image: url('https://images.unsplash.com/photo-1519666336592-e225a99dcd2f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=934&q=80');">
 </div>
