--- a/app/views/flights/_booking.html.erb
+++ b/app/views/flights/_booking.html.erb
@@ -1,8 +1,32 @@
+<%# <div class="header">
+  <!-- SVG + ✈ + COUNTRY CODES start -->
+  <div class="top-mark mt-6" style="position: relative;">
+    <svg width="343" height="12" viewBox="0 0 343 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <circle cx="337" cy="6" r="5.5" stroke="black"/>
+    <circle cx="6" cy="6" r="5.5" stroke="black"/>
+    <line x1="11" y1="5.5" x2="331" y2="5.5" stroke="black" stroke-opacity="0.46" stroke-dasharray="5 5"/>
+    </svg>
+
+    <p style="position: absolute; top: -5px; left: 47%; color: #282828; background-color: #eaeeef; font-size: 24px;">✈</p>
+  </div>
+  <div class="container-show d-flex justify-content-between" style="color: #282828; margin-top: -12px;">
+
+  </div>
+</div> %>
+
 <div class="show-card">
 
     <% if flight_instance.flight_number.nil? %>
       <% results.each do |flight| %>
         <div class="top-show-card">
+          <div class="top-mark mt-6" style="position: relative;">
+            <svg width="200" height="12" viewBox="0 0 343 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="337" cy="6" r="5.5" stroke="black"/>
+            <circle cx="6" cy="6" r="5.5" stroke="black"/>
+            <line x1="11" y1="5.5" x2="331" y2="5.5" stroke="black" stroke-opacity="0.46" stroke-dasharray="5 5"/>
+            </svg>
+            <p style="position: absolute; top: -5px; left: 47%; color: #282828; background-color: #eaeeef; font-size: 24px;">✈</p>
+          </div>
           <hr>
           <p><%= flight[:departure_full].gsub("Airport", "") %></p>
           <p><%= flight[:arrival_full].gsub("Airport", "")%></p>
