--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -7,7 +7,9 @@
 .container-index {
   margin: 5%;
   border-radius: 7px;
-
+  margin-left: 30px;
+  margin-right: 30px;
+  width: auto;
 }
 
 .show-card{
@@ -17,7 +19,7 @@
   padding: 20px;
   // filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   border-radius: 8px;
- 
+
 }
 
 .container-show{
