--- a/app/views/trip_flights/new.html.erb
+++ b/app/views/trip_flights/new.html.erb
@@ -2,14 +2,13 @@
 
   <%= link_to 'Cancel', root_path,  class: "cancel-link" %>
 
-      <div class="top-mark">
-      <svg width="148" height="26" viewBox="0 0 148 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <line x1="3" y1="13.5" x2="137" y2="13.5" stroke="#C4C4C4" stroke-width="7"/>
-      <circle cx="13" cy="13" r="13" fill="#C4C4C4"/>
-      <circle cx="135" cy="13" r="13" fill="#C4C4C4"/>
-      <circle cx="13" cy="13" r="10" fill="#23786B"/>
-      </svg>
-    </div>
+  <div class="top-mark">
+    <svg width="299" height="12" viewBox="0 0 343 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <circle cx="337" cy="6" r="5.5" stroke="black"/>
+    <circle cx="6" cy="6" r="5.5" stroke="black"/>
+    <line x1="11" y1="5.5" x2="331" y2="5.5" stroke="black" stroke-opacity="0.46" stroke-dasharray="5 5"/>
+    </svg>
+  </div>
 
       <div class="form">
 
