Fabrizio is even better than the best - fixed the image problem on the trips index page, fixed the navbar on the trips index page, the link in the more info page is udnerlinded now, and the search for flights link look better

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -64,7 +64,7 @@
   height: 55vh;
   background-position: center;
   background-size: cover;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   border-radius:50px 50px 0px 0px;
   filter: grayscale(50%)
