--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -13,6 +13,7 @@
   justify-content: space-between;
   border-bottom: 1px solid lightgray;
   padding-bottom: 0px !important;
+  align-items: center;
 }
 
 .font_text {
@@ -100,7 +101,7 @@
   height: auto;
   object-fit: cover;
   border-radius: 40%;
-  margin: 0 auto;
+
 }
 
 .img-show-page-arrow-flights {
@@ -136,12 +137,15 @@
 }
 
 .flex-item {
-  padding-left: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   padding: 6px;
+  flex:1;
 }
+.flex-item h3{
+  text-align: center;
+}
+
 
 #align-right {
   align-items: flex-end;
@@ -200,4 +204,6 @@ ul {
   padding: 2px;
   border-radius: 6px;
   text-align: right;
+  margin-bottom: 2px;
+  margin-top: 2px;
 }
