--- a/app/assets/stylesheets/pages/_new.scss
+++ b/app/assets/stylesheets/pages/_new.scss
@@ -1,6 +1,9 @@
 .container {
   background-color: $body-color;
-  color: $brand
+  color: $brand;
+  margin-left: 30px;
+  margin-right: 30px;
+  width: auto;
 }
 
 #map {
@@ -10,7 +13,6 @@
 }
 
 .form .button {
-
   height: 50px;
   margin-top: 20px;
   background-color: #23786B;
