removed s in more infos

--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -52,7 +52,7 @@
 
     <!-- Button trigger modal -->
     <p style="color: grey; margin-top: 8px;" data-toggle="modal" data-target="#exampleModal1">
-      More infos
+      More info
     </p>
   </div>
 </div>
@@ -158,7 +158,7 @@
         <p class="font_text1"><%= @test_type_home %></p>
       </div>
     <p style="color: grey; margin-top: 8px;" data-toggle="modal" data-target="#exampleModal2">
-      More infos
+      More info
     </p>
 
 
